<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btJudge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Test"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btContentProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_provider"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintTop_toBottomOf="@id/btJudge" />

    <Button
        android:id="@+id/btEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encryptFile"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btContentProvider" />

    <Button
        android:id="@+id/btDataBind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dataBinding"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintTop_toBottomOf="@id/btContentProvider" />

    <Button
        android:id="@+id/btNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btDataBind" />

    <Button
        android:id="@+id/btPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_bt"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btNotification" />

    <Button
        android:id="@+id/btPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preference"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btPermission" />

    <Button
        android:id="@+id/btShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_sheet"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btPreference" />


    <Button
        android:id="@+id/btFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btShare" />

    <Button
        android:id="@+id/btViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewpager2"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btFragment" />
</androidx.constraintlayout.widget.ConstraintLayout>