<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.viewpager.MutableCollectionBaseActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacer_small"
        android:layout_marginTop="@dimen/spacer_large"
        android:layout_marginRight="@dimen/spacer_small"
        android:text="@string/viewpager2"
        android:textDirection="locale"
        android:textStyle="bold" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_small"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacer_small"
            android:text="@string/toolbox"
            android:textDirection="locale"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_small"
                android:text="@string/choose_a_page" />

            <Spinner
                android:id="@+id/itemSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_small"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_small"
                android:text="@string/use_diff_util" />

            <CheckBox
                android:id="@+id/useDiffUtil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_small"
                android:checked="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonGoTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_small"
                android:layout_weight="1"
                android:text="@string/go_to_page"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonRemove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_small"
                android:layout_weight="1"
                android:text="@string/remove_page"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonAddBefore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_small"
                android:layout_weight="1"
                android:text="@string/add_new_before"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonAddAfter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacer_small"
                android:layout_weight="1"
                android:text="@string/add_new_after"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>