<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Main8Activity">

    <Button
        android:id="@+id/btText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_text"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btBinary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_binary_content"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btText" />


    <Button
        android:id="@+id/btMultiBinary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_multi_binary"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btBinary" />

    <Button
        android:id="@+id/btRichText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_rich_text"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btMultiBinary" />
</androidx.constraintlayout.widget.ConstraintLayout>