<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/btAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btAdd"
        android:text="@string/add_ContentProvider"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btDel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btDel"
        android:text="@string/del_ContentProvider"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btAdd" />

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btUpdate"
        android:text="@string/update_ContentProvider"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btDel" />


    <Button
        android:id="@+id/btQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btQuery"
        android:text="@string/query_ContentProvider"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btUpdate" />

    <Button
        android:id="@+id/btCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btCall"
        android:text="@string/call_ContentProvider"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btQuery" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btCall"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>