<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dh.testproject.databinding.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".databinding.ViewModelActivity">

        <TextView
            android:id="@+id/tvLabelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataBinding_Name"
            android:textSize="@dimen/text_size_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.name}"
            android:textSize="@dimen/text_size_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelName" />

        <TextView
            android:id="@+id/tvLabelLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataBinding_LastName"
            android:textSize="@dimen/text_size_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.lastName}"
            android:textSize="@dimen/text_size_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLabelLastName" />


        <ImageView
            android:id="@+id/ivImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/dataBinding_ImageDes"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/ic_person_black_96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLastName"
            app:popularityIcon="@{viewModel.popularity}" />

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(viewModel.likes)}"
            android:textSize="@dimen/text_size_1"
            app:layout_constraintEnd_toEndOf="@id/ivImg"
            app:layout_constraintStart_toStartOf="@id/ivImg"
            app:layout_constraintTop_toBottomOf="@id/ivImg" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onLike()}"
            android:text="@string/dataBinding_Add"
            android:textSize="@dimen/text_size_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLikes" />

        <Button
            android:id="@+id/btSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onSubLike()}"
            android:text="@string/dataBinding_Sub"
            android:textSize="@dimen/text_size_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btAdd" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hideIfZero="@{viewModel.likes}"
            app:layout_constraintTop_toBottomOf="@id/btSub"
            app:max="@{100}"
            app:progressScaled="@{viewModel.likes}"
            app:progressTint="@{viewModel.popularity}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>